tests/data/motifs/bad/test_pwms_bad3.motifscan
>MA0006.1	Ahr::Arnt	PWM
A [-0.85815	-5.68647	-5.68647	-5.68647	-5.68647	-5.68647]
Cutoff_p1e-2	-0.05020516564452884
